--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Button Clicker</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head>
 <body>
     <!--nav bar-->
@@ -24,15 +23,15 @@
     <!--body main-->
     <div class="main">
         <div class="columns flex">
-            <div class="col-2">
+            <div class="left_column">
                 <div class="topleft flex align">
-                    <div class="topleft1">
+                    <div class="top_left_ninja">
                         <h1>ninja</h1>
                         <p>noun</p>
                         <P>Plural: ninjas</P>
-                        <button class="yellow" onclick="alert('This page says Ninja was liked')">13 likes</button>
+                        <button class="yellow" onclick="alert('Ninja was liked')">13 likes</button>
                     </div>
-                    <div class="topleft2 flex align">
+                    <div class="top_left_noun flex align">
                         <p>A practitioner skilled in the</p>
                         <a href="#">Japanese </a>
                         <p> art of </p>
@@ -40,13 +39,13 @@
                     </div>
                 </div>
                 <div class="bottomleft flex align">
-                    <div class="bottomleft1">
+                    <div class="bottom_left_ninja">
                         <h1>ninja</h1>
                         <p>noun</p>
                         <P>Plural: ninjas</P>
                         <button class="yellow">37 likes</button>
                     </div>
-                    <div class="bottomleft2 flex align">
+                    <div class="bottom_left_noun flex align">
                         <p>A</p>
                         <a href="#">programmer</a>
                         <p>who breaks down problmes with</p>
@@ -55,9 +54,9 @@
                     </div>
                 </div>
             </div>
-            <div class="col-1">
-                <div class="topright flex align">
-                    <div class="topright1">
+            <div class="right_column">
+                <div class="top_right flex align">
+                    <div class="top_right_inside">
                         <h2>Dojonary is defined by</h2>
                         <h2 class="bold">YOU</h2>
                         <button class="green" onclick="hide(this)" >Add Definition</button>
@@ -66,5 +65,6 @@
             </div>
         </div>
     </div>
+<script src="script.js"></script>
 </body>
 </html>
